// Request messages used to fetch tiles and resources
syntax = "proto3";

package androidx.wear.tiles.proto;

import "device_parameters.proto";



option java_package = "androidx.wear.tiles.proto";
option java_outer_classname = "RequestProto";

// Parameters passed to a Tile provider when the renderer is requesting a new
// version of the tile.
message TileRequest {
  // The ID of the Clickable that was tapped to cause this request. Empty string
  // if the request was not caused by a Clickable.
  // TODO(b/167954298): Pass a State object here instead.
  string clickable_id = 1;

  // Parameters describing the device requesting the tile update.
  DeviceParameters device_parameters = 2
     ;
}

// Parameters passed to a Tile provider when the renderer is requesting a
// specific resource version.
message ResourcesRequest {
  // The version of the resources being fetched
  string version = 1;

  // Requested resource IDs. If not specified, all resources for the given
  // version must be provided in the response.
  repeated string resource_ids = 2;
}
